[project]
name = "burton-lab-zebrafish-oocyte-analysis"
version = "0.1.0"
description = "Image analysis pipelines for zebrafish oocyte images"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "cellpose>=4.2.1.1",
    "matplotlib>=3.11.0",
    "numpy>=2.5.0",
    "oic-toolkit",
    "openslide-bin>=4.0.1.2",
    "openslide-python>=1.4.6",
    "pandas>=3.0.3",
    "scikit-image>=0.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["shared"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.uv.sources]
oic-toolkit = { path = "../../Toolboxes/oic-toolkit", editable = true }
